--- a/1-9.css
+++ b/1-9.css
@@ -5,16 +5,13 @@
 }
 
 header {
-  width: 100%;
   height: 50px;
-  margin-bottom: 50px;
   background-color: #ff9a4b;
 }
 
 main {
   width: 960px;
   display: flex;
-  justify-content: center;
   margin: 50px auto;
 }
 
@@ -24,6 +21,10 @@ main {
   padding: 10px;
   position: relative;
   background-color: #eeeeee;
+}
+
+.work:last-child {
+  margin-right: 0;
 }
 
 .work-image1 {
@@ -49,8 +50,14 @@ main {
 
 .step {
   position: absolute;
+  top: 0;
+  left: 0;
   background-color: #ff9a4b;
   color: white;
+}
+
+.work-title {
+  margin: 15px 0 5px;
 }
 
 footer {
